2004-09-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/*: ly_c[ad]+r -> scm_XXX , ly_c_pair_p -> scm_is_pair.

	* scripts/lilypond-book.py (Compile_error.process_include): catch
	Compile_error exception, and remove output .texi.

	* scm/define-music-properties.scm (all-music-properties): add
	error-found

	* lily/parser.yy (Music_list): add error-found to music with errors.

	* lily/lily-parser.cc (LY_DEFINE): ignore scores with errors.

	* lily/book.cc (process): ignore books with errors

	* lily/include/score.hh (class Score): add error_found_ member.

	* lily/drum-note-engraver.cc (try_music): idem.

	* lily/note-heads-engraver.cc: remove start-playing-event.

	* lily/part-combine-iterator.cc (Part_combine_iterator): use
	BusyPlayingEvent to determine which voice was active last.
	(unisono): use last active to where to get unisono information
	from. This fixes: partcombine-rest.ly (again).

	* scm/part-combiner.scm (determine-split-list): cleanups

2004-09-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/lyric-extender.ly: simplify.
	complexify.

	* lily/lyric-extender.cc (print): use it to determine size of
	extender. Remove Lyric_extender::is_visible().

	* lily/extender-engraver.cc (acknowledge_grob): store lyric in
	next property.

	* lily/lyric-engraver.cc: remove get_current_rest().
	
2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/lyric-extender.ly: Fix and add test.

	* lily/extender-engraver.cc (stop_translation_timestep): Oops, typo.

2004-09-23  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/note-head.cc: remove Note_head::extent.

2004-09-23  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/tutorial.itely: do manual style 2-space
	indents in examples

	* Documentation/user/notation.itely: more editing.

2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lyric-engraver.cc (get_current_rest): New function.

	* lily/extender-engraver.cc (stop_translation_timestep): Use it:
	stop at rest.
